--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 body {
   margin: 0;
-  background-color: #c7f0db;
+  color: #40514e;
   text-align: center;
   font-family: 'Baskervville', serif;
 
@@ -34,12 +34,14 @@ h3 {
 .middle-container {
   background-color: #c7f0db;
   width: auto;
-  height: 200px;
+  height: 20%;
+  margin-top: 0;
 }
 
 .profile{
-  padding-left: 500px;
-  padding-right: 500px}
+  margin-left: 28%;
+  margin-right: 28%;
+}
 
 
 .middle-container2 {
@@ -47,6 +49,9 @@ h3 {
   width: auto;
 }
 
+.mypic{
+  padding-top: 20px;
+}
 
 .upper-bottom-conatiner{
   background-color: white;
@@ -68,19 +73,20 @@ h3 {
 
 .cloud {
   position: absolute;
-  bottom: 300px;
-  right: 850px;
+  bottom: 40%;
+  left: 30%;
 }
 
 .cloud1 {
   position: absolute;
-  bottom: 300px;
-  right: 540px;
+  bottom: 40%;
+  right: 30%;
 }
 
 .mountain {
   position: center;
   bottom: 0px;
+  margin-bottom: -0.3%;
 }
 
 .row{
@@ -89,6 +95,52 @@ h3 {
 
 .skill-row{
   text-align: ;
-  padding-right: 300px;
-  padding-left: 300px;
+  padding-right: 20%;
+  padding-left: 20%;
+}
+
+
+.myButton {
+	box-shadow: 0px 0px 0px 2px #9fb4f2;
+	background-color:#7892c2;
+	border-radius:10px;
+	border:1px solid #4e6096;
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	font-family:Arial;
+	font-size:20px;
+	padding:12px 37px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #283966;
+}
+.myButton:hover {
+	background-color:#476e9e;
+}
+.myButton:active {
+	position:relative;
+	top:1px;
+}
+
+.btn {
+	box-shadow: 0px 0px 0px 2px #9fb4f2;
+	background:linear-gradient(to bottom, #899fc4 5%, #899fc4 100%);
+	background-color:#899fc4;
+	border-radius:10px;
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	font-family:Georgia;
+	font-size:10px;
+	font-weight:bold;
+	padding:10px 25px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #283966;
+	&:hover {
+	background:linear-gradient(to bottom, #899fc4 5%, #899fc4 100%);
+	background-color:#899fc4;
+}
+ &:active {
+	position:relative;
+	top:1px;
 }
